tests/NormalTests/paczka1/fuzzy1/56274902.err
Error in line 16: 311f A312 24,8
Error in line 9: UtJxBqZK S10 46,3
Error in line 29: A620 A312 80,1
Error in line 30: UtJxBqZK A620 18,3
